[package]
name = "file_transfer_client_tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
sha256 = "1.3.0"
log = "0.4.19"
env_logger = "0.10.0"
fern = "0.6.2"
chrono = "0.4.26"
uuid = { version = "1.4.1", features = ["v4"] }
lazy_static = "1.4.0"
walkdir = "2.3.3"
network_tcp_packet = { path = "../network_tcp_packet" }